<resources>
    <string name="app_name">alpine</string>
    <string name="camera_capture_instruction">Scan passport photo page</string>
    <string name="camera_capture_error_message">Processing failed. Try again with the MRZ section of the passport clearly visible.</string>
    <string name="camera_capture_enter_manually">Enter manually</string>
    <string name="error_generic">Something went wrong. Please try again later.</string>
    <string name="main_enter_manually">Enter MRZ info manually</string>
    <string name="main_start">Start scanning MRZ</string>
    <string name="no_thanks">No, thanks</string>
    <string name="ok">OK</string>
    <string name="rationale_permission_camera">To take the photo of the passport information page, you need to allow access to the camera.</string>
    <string name="action_next_button">Next</string>

    <string name="mrz_info_passport_number_hint">Passport Number</string>
    <string name="mrz_info_date_of_birth_hint">Date of Birth</string>
    <string name="mrz_info_date_of_expiry_hint">Date of Expiry</string>
    <string name="mrz_info_placeholder_date">YYMMDD</string>

    <string name="nfc_scanning_title">Read NFC</string>
    <string name="nfc_scanning_name">Name: %s</string>
    <string name="nfc_scanning_surname">Surname: %s</string>
    <string name="nfc_scanning_personal_number">Personal Number: %s</string>
    <string name="nfc_scanning_gender">Gender: %s</string>
    <string name="nfc_scanning_birth_date">Birth Date: %s</string>
    <string name="nfc_scanning_expiry_date">Expiry Date: %s</string>
    <string name="nfc_scanning_passport_number">Passport Number: %s</string>
    <string name="nfc_scanning_nationality">Nationality: %s</string>
    <string name="nfc_scanning_document_type">Document Type: %s</string>
    <string name="nfc_scanning_issuer_authority">Issuer Authority: %s</string>
    <string name="nfc_scanning_passport_image">Passport Image</string>
    <string name="nfc_scanning_fingerprint_image">Fingerprint Image</string>
    <string name="nfc_scanning_signature_image">Signature Image</string>
    <string name="nfc_scanning_instruction">Tap and hold your device on your passport</string>
    <string name="nfc_scanning_reading_data">Reading NFC data…</string>
</resources>
