<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sample.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_400"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/nfc_scanning_title"
        app:titleTextColor="@color/white" />

    <ProgressBar
        android:id="@+id/prgLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivPassportImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:contentDescription="@string/nfc_scanning_passport_image"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <LinearLayout
        android:id="@+id/llPassportDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/ivPassportImage">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nfc_scanning_name"
            android:textSize="@dimen/text_normal" />

        <TextView
            android:id="@+id/tvSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nfc_scanning_surname"
            android:textSize="@dimen/text_normal" />

        <TextView
            android:id="@+id/tvPersonalNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nfc_scanning_personal_number"
            android:textSize="@dimen/text_normal" />

        <TextView
            android:id="@+id/tvGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nfc_scanning_gender"
            android:textSize="@dimen/text_normal" />

        <TextView
            android:id="@+id/tvBirthDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nfc_scanning_birth_date"
            android:textSize="@dimen/text_normal" />

        <TextView
            android:id="@+id/tvExpiryDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nfc_scanning_expiry_date"
            android:textSize="@dimen/text_normal" />

        <TextView
            android:id="@+id/tvSerialNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nfc_scanning_serial_number"
            android:textSize="@dimen/text_normal" />

        <TextView
            android:id="@+id/tvNationality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nfc_scanning_nationality"
            android:textSize="@dimen/text_normal" />

        <TextView
            android:id="@+id/tvDocumentType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nfc_scanning_document_type"
            android:textSize="@dimen/text_normal" />

        <TextView
            android:id="@+id/tvIssuerAuthority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nfc_scanning_issuer_authority"
            android:textSize="@dimen/text_normal" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/gPassportDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="ivPassportImage, llPassportDetails" />

</androidx.constraintlayout.widget.ConstraintLayout>
